[package]
name = "kqueue"
version = "0.2.1"
authors = ["William Orr <will@worrbase.com>"]
description = "kqueue interface for BSDs"
license = "MIT"
keywords = ["kqueue", "kevent", "bsd"]
categories = ["os::unix-apis", "filesystem"]
repository = "https://gitlab.com/worr/rust-kqueue"
readme = "README.md"
documentation = "https://docs.worrbase.com/rust/kqueue/"

[dependencies]
kqueue-sys = "^0.1.3"
libc = "^0.2.17"
