[package]
name = "kqueue"
version = "0.2.2"
authors = ["William Orr <will@worrbase.com>", "Daniel (dmilith) Dettlaff <dmilith@me.com>"]
description = "kqueue interface for BSDs"
license = "MIT"
keywords = ["kqueue", "kevent", "bsd"]
categories = ["os::unix-apis", "filesystem"]
repository = "https://gitlab.com/worr/rust-kqueue"
readme = "README.md"
documentation = "https://docs.worrbase.com/rust/kqueue/"

[dependencies]
kqueue-sys = { version = "0.1.4", git = "https://github.com/VerKnowSys/rust-kqueue-sys" }
libc = "^0.2.17"
