[package]
name = "kqueue2"
version = "0.2.2"
authors = ["William Orr <will@worrbase.com>", "Daniel (dmilith) Dettlaff <dmilith@me.com>"]
description = "kqueue interface for BSDs and MacOS"
license = "MIT"
keywords = ["kqueue", "kevent", "bsd", "macos", "darwin"]
categories = ["os::unix-apis", "filesystem"]
repository = "https://github.com/VerKnowSys/rust-kqueue"
readme = "README.md"
documentation = "https://docs.worrbase.com/rust/kqueue/"

[dependencies]
kqueue2-sys = "0.1"
libc = "0.2"
